--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
             </ul>
         </nav>
         <div id="title">
-            <h1>Testar Dan!</h1>
+            <h1>Testar Danne!</h1>
             <p></p>
         </div>
     </header>
