Parkodning: Emil + Dan

--- a/public/index.html
+++ b/public/index.html
@@ -4,32 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS/index.css">
     <title>vStack</title>
 </head>
 <body>
     <header>
         <div id="disclaimer-banner"></div>
         <nav class="main-nav">
-            <ul>
-                <li id="goto-home">
-                    <span class="l-icon"></span><a href="#"></a>
-                </li>
-                <li id="goto-products">
-                    <span class="l-icon"></span><a href="products.html"></a>
-                </li>
-                <li id="goto-about">
-                    <span class="l-icon"></span><a href="about.html"></a>
-                </li>
-                <li id="goto-support">
-                    <span class="l-icon"></span><a href="support.html"></a>
-                </li>
-                <li id="goto-returnpol">
-                    <span class="l-icon"></span><a href="returnpolicy.html"></a>
-                </li>
-                <li id="goto-cart">
-                    <span class="icon"></span><a href="cart.html"></a>
-                </li>
-            </ul>
+                <a href="">Home</a>
+                <a href="">Products</a>
+                <a href="">About Us</a>
+                <a href="">Contact</a>
+                <a href="">Returnpolicy</a>
         </nav>
         <div id="title">
             <h1></h1>
