--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,800;1,400;1,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css-generated/style.css" />
     <title>Virus4U</title>
 </head>
@@ -19,22 +22,22 @@
         <nav class="main-nav">
             <ul>
                 <li id="goto-home">
-                    <span class="l-icon"></span><a href="#"></a>
+                    <a href="#"><span class="l-icon"></span></a>
                 </li>
                 <li id="goto-products">
-                    <span class="l-icon"></span><a href="products.html"></a>
+                    <a href="products.html"><span class="l-icon"></span></a>
                 </li>
                 <li id="goto-about">
-                    <span class="l-icon"></span><a href="about.html"></a>
+                    <a href="about.html"><span class="l-icon"></span></a>
                 </li>
                 <li id="goto-support">
-                    <span class="l-icon"></span><a href="support.html"></a>
+                    <a href="support.html"><span class="l-icon"></span></a>
                 </li>
                 <li id="goto-returnpol">
-                    <span class="l-icon"></span><a href="returnpolicy.html"></a>
+                    <a href="returnpolicy.html"><span class="l-icon"></span></a>
                 </li>
                 <li id="goto-cart">
-                    <span class="icon"></span><a href="cart.html"></a>
+                    <a href="cart.html"><span class="icon"></span></a>
                 </li>
             </ul>
         </nav>
