--- a/public/index.html
+++ b/public/index.html
@@ -8,16 +8,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,800;1,400;1,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css-generated/style.css" />
+    <script src="../scripts/index.js" defer></script>
     <title>Virus4U</title>
 </head>
 <body>
     <header>
         <div id="disclaimer-banner">
-            <span class="l-icon">
-                <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="exclamation-circle" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="svg-inline--fa fa-exclamation-circle fa-w-16 fa-5x"><path fill="currentColor" d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z" class=""></path></svg>
-            </span>
-            <h3><strong>OBS!</strong> Denna sida är ett projekt inom kursen <em>UTVECKLING AV WEBBAPPLIKATIONER</em> på <a href="https://www.newton.se/" rel="noreferrer noopener">Newton yrkeshögskola</a>.<br>
-                <strong>PRODUKTERNA ÄR INTE VERKLIGA!</strong> (Om nu någon trodde det...)</h3>
+            <h3>
+                <span class="l-icon">
+                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="exclamation-circle" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="svg-inline--fa fa-exclamation-circle fa-w-16 fa-5x"><path fill="currentColor" d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z" class=""></path></svg>
+                </span>
+                <strong>OBS!</strong> Denna sida är ett projekt inom kursen <em>UTVECKLING AV WEBBAPPLIKATIONER</em> på <a href="https://www.newton.se/" rel="noreferrer noopener">Newton&nbsp;yrkeshögskola</a>.<br>
+                    <strong>PRODUKTERNA ÄR INTE VERKLIGA!</strong> (Om nu någon trodde det...)
+            </h3>
         </div>
         <nav class="main-nav">
             <ul>
