--- a/public/index.html
+++ b/public/index.html
@@ -4,30 +4,58 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Virus4U</title>
+    <!-- favicon links. Favicons made with https://realfavicongenerator.net/ -->
+    <link rel="apple-touch-icon" sizes="180x180" href="../favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../favicons/favicon-16x16.png">
+    <link rel="manifest" href="../favicons/site.webmanifest">
+    <link rel="mask-icon" href="../favicons/safari-pinned-tab.svg" color="#45a03c">
+    <link rel="shortcut icon" href="../favicons/favicon.ico">
+    <meta name="msapplication-TileColor" content="#2b5797">
+    <meta name="msapplication-config" content="../favicons/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,800;1,400;1,600&display=swap" rel="stylesheet">
+    <!-- style and scripts -->
+    <link rel="stylesheet" href="../css/style.css" />
+    <script src="../scripts/index.js" defer></script>
+    <title>vStack</title>
 </head>
 <body>
     <header>
-        <div id="disclaimer-banner"></div>
-        <nav class="main-nav">
+        <div id="disclaimer-banner">
+            <div>
+                <span class="icon">
+                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="exclamation-circle" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="svg-inline--fa fa-exclamation-circle fa-w-16 fa-5x"><path fill="currentColor" d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z" class=""></path></svg>
+                </span>
+                <strong>OBS!</strong> Denna sida är ett projekt inom kursen <em>UTVECKLING AV WEBBAPPLIKATIONER</em> på <a href="https://www.newton.se/" rel="noreferrer noopener" target="_blank">Newton&nbsp;yrkeshögskola</a>.<br>
+                    <strong>PRODUKTERNA ÄR INTE VERKLIGA!</strong> (Om nu någon trodde det...)
+            </div>
+        </div>
+        <nav id="main-nav">
             <ul>
-                <li id="goto-home">
-                    <span class="l-icon"></span><a href="#"></a>
+                <li id="vstack-logo" class="nav-icon">
+                    <span class="icon"></span>
                 </li>
-                <li id="goto-products">
-                    <span class="l-icon"></span><a href="products.html"></a>
+                <li id="goto-home" class="nav-link">
+                    <a href="#"><span class="icon"></span></a>
                 </li>
-                <li id="goto-about">
-                    <span class="l-icon"></span><a href="about.html"></a>
+                <li id="goto-products" class="nav-link">
+                    <a href="products.html"><span class="icon"></span></a>
                 </li>
-                <li id="goto-support">
-                    <span class="l-icon"></span><a href="support.html"></a>
+                <li id="goto-about" class="nav-link">
+                    <a href="about.html"><span class="icon"></span></a>
                 </li>
-                <li id="goto-returnpol">
-                    <span class="l-icon"></span><a href="returnpolicy.html"></a>
+                <li id="goto-support" class="nav-link">
+                    <a href="support.html"><span class="icon"></span></a>
                 </li>
-                <li id="goto-cart">
-                    <span class="icon"></span><a href="cart.html"></a>
+                <li id="goto-returnpol" class="nav-link">
+                    <a href="returnpolicy.html"><span class="icon"></span></a>
+                </li>
+                <li id="goto-cart" class="nav-link">
+                    <a href="cart.html"><span class="icon"></span></a>
                 </li>
             </ul>
         </nav>
@@ -42,9 +70,9 @@
     </main>
     <footer>
         <div id="social-media-links">
-            <span class="social-link"></span>
-            <span class="social-link"></span>
-            <span class="social-link"></span>
+            <a href="#" class="social-link"><span class="icon"></span></a>
+            <a href="#" class="social-link"><span class="icon"></span></a>
+            <a href="#" class="social-link"><span class="icon"></span></a>
         </div>
         <div id="copyright"></div>
     </footer>
