--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,800;1,400;1,600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- style and scripts -->
+    <script src="https://kit.fontawesome.com/b1cb71f6ae.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/style.css" />
     <script src="../scripts/index.js" defer></script>
@@ -30,7 +31,8 @@
         <div id="disclaimer-banner">
             <div>
                 <span class="icon">
-                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="exclamation-circle" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="svg-inline--fa fa-exclamation-circle fa-w-16 fa-5x"><path fill="currentColor" d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z" class=""></path></svg>
+                    <i class="fas fa-exclamation-circle"></i>
+                    <!-- <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="exclamation-circle" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="svg-inline--fa fa-exclamation-circle fa-w-16 fa-5x"><path fill="currentColor" d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z" class=""></path></svg> -->
                 </span>
                 <strong>OBS!</strong> Denna sida är ett projekt inom kursen <em>UTVECKLING AV WEBBAPPLIKATIONER</em> på <a href="https://www.newton.se/" rel="noreferrer noopener" target="_blank">Newton&nbsp;yrkeshögskola</a>.<br>
                     <strong>PRODUKTERNA ÄR INTE VERKLIGA!</strong> (Om nu någon trodde det...)
@@ -73,11 +75,11 @@
     </main>
     <footer>
         <div id="social-media-links">
-            <a href="#" class="social-link"><span class="icon"></span></a>
-            <a href="#" class="social-link"><span class="icon"></span></a>
-            <a href="#" class="social-link"><span class="icon"></span></a>
+            <a href="#" class="social-link"><span class="icon"><i class="fab fa-facebook"></i></span></a>
+            <a href="#" class="social-link"><span class="icon"><i class="fab fa-twitter"></i></span></a>
+            <a href="#" class="social-link"><span class="icon"><i class="fab fa-discord"></i></span></a>
         </div>
-        <div id="copyright"></div>
+        <div id="copyright">&copy;</div>
     </footer>
 </body>
 </html>
