--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
             </div>
         </div>
         <nav id="main-nav">
-            <span id="logo">
+            <span id="logo" class="logoCart">
                 <span class="material-icons md-virus">shield_moon</span>
                 <h1 class="vstack">vStack</h1>
             </span>
@@ -60,7 +60,7 @@
                     <a href="returnpolicy.html"><span class="icon"></span>Return Policy</a>
                 </li>
             </ul>
-            <span id="goto-cart">
+            <span id="goto-cart" class="logoCart">
                 <a href="cart.html"><span class="material-icons md-cart">shopping_cart</span></a>
             </span>
         </nav>
