--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,13 @@
         </div>
     </header>
     <main>
-        <div id="special-offer"></div>
+        <div id="special-offer">
+            <div id="bannerImageDiv"><img id="bannerImage" src="https://specials.han.nl/sites/studycentres/news/study-space-reservation-m/banner-virus.jpg"> </div>
+            <div id="offer">
+                <h1 id="offerTitle">Erbjudande!</h1>
+                <p id="offerText">Köp 3 produkter och få 50% på den billigaste!</p>
+            </div>
+        </div>
         <div id="popular-products"></div>
     </main>
     <footer>
@@ -79,7 +85,7 @@
             <a href="#" class="social-link"><span class="icon"><i class="fab fa-twitter"></i></span></a>
             <a href="#" class="social-link"><span class="icon"><i class="fab fa-discord"></i></span></a>
         </div>
-        <div id="copyright">&copy;</div>
+        <div id="copyright"><p>Copyright © 2021 vStack All Rights Reserved.</p></div>
     </footer>
 </body>
 </html>
