--- a/public/index.html
+++ b/public/index.html
@@ -64,12 +64,8 @@
                 <a href="cart.html"><span class="material-icons md-cart">shopping_cart</span></a>
             </span>
         </nav>
-        <div id="title">
-            <h1></h1>
-            <p></p>
-        </div>
     </header>
-    <main>
+    <main class="main">
         <div id="special-offer">
             <div id="bannerImageDiv"><img id="bannerImage" src="https://specials.han.nl/sites/studycentres/news/study-space-reservation-m/banner-virus.jpg"> </div>
             <div id="offer">
@@ -77,9 +73,16 @@
                 <p id="offerText">Köp 3 produkter och få 50% på den billigaste!</p>
             </div>
         </div>
-        <div id="popular-products"></div>
+        <div id="popularProducts">
+            <h2 id="popH1">Välkommen till vårt familjeföretag som tillverkar virus. Företaget grundades 1340 och en av våra mest använda produkter var pesten. På senare år har vi digitaliserat oss
+                och är numera helt digitala. Alla våra virus är tillverkade med grön el och är Svanenmärkta!</h2>
+            <h1 id="popularProdH1">Våra mest populära produkter:</h1>
+
+
+        </div>
     </main>
     <footer>
+
         <div id="social-media-links">
             <a href="#" class="social-link"><span class="icon"><i class="fab fa-facebook"></i></span></a>
             <a href="#" class="social-link"><span class="icon"><i class="fab fa-twitter"></i></span></a>
