--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <!-- style and scripts -->
     <script src="https://kit.fontawesome.com/b1cb71f6ae.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/index.css">
-    <link rel="stylesheet" href="../css/style.css" />
+    <!-- <link rel="stylesheet" href="../css/style.css" /> -->
     <script src="../scripts/index.js" defer></script>
     <title>vStack</title>
 </head>
@@ -87,6 +87,16 @@
             <a href="#" class="social-link"><span class="icon"><i class="fab fa-facebook"></i></span></a>
             <a href="#" class="social-link"><span class="icon"><i class="fab fa-twitter"></i></span></a>
             <a href="#" class="social-link"><span class="icon"><i class="fab fa-discord"></i></span></a>
+        </div>
+        <div id="darkmode-toggle" onclick="toggleDarkMode()">
+            <div class="darkmode-icon-container">
+                <div id="sun-icon" class="darkmode-icon">
+                    <span class="material-icons">light_mode</span>
+                </div>
+                <div id="moon-icon" class="darkmode-icon">
+                    <span class="material-icons">dark_mode</span>
+                </div>
+            </div>
         </div>
         <div id="copyright"><p>Copyright © 2021 vStack All Rights Reserved.</p></div>
     </footer>
