Added menu button in small mode. need to fix styling and animation for menu.

--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
         </div>
         <nav id="main-nav">
             <span id="logo" class="logoCart">
+                <span class="material-icons md-menuButton">menu_open</span>
                 <span class="material-icons md-virus">shield_moon</span>
                 <h1 class="vstack">vStack</h1>
             </span>
