Made menubar li elements clickable

--- a/public/products.html
+++ b/public/products.html
@@ -41,20 +41,20 @@
                 <span class="material-icons md-virus">shield_moon</span>
                 <h1 class="vstack">vStack</h1>
             </span>
-            <ul>
-                <li id="goto-home" class="menubar">
-                    <a href="index.html"><span class="icon"></span>Home</a>
+            <ul id="menuBarID">
+                <li onclick="location.href='index.html'" style="cursor: pointer" id="goto-home" class="menubar">
+                    <a href="#"><span class="icon"></span>Home</a>
                 </li>
-                <li id="goto-products" class="menubar">
-                    <a href=""><span class="icon"></span>Products</a>
+                <li onclick="location.href='products.html'" style="cursor: pointer" id="goto-products" class="menubar">
+                    <a href="products.html"><span class="icon"></span>Products</a>
                 </li>
-                <li id="goto-about" class="menubar">
+                <li onclick="location.href='about.html'" style="cursor: pointer" id="goto-about" class="menubar">
                     <a href="about.html"><span class="icon"></span>About Us</a>
                 </li>
-                <li id="goto-support" class="menubar">
+                <li onclick="location.href='support.html'" style="cursor: pointer" id="goto-support" class="menubar">
                     <a href="support.html"><span class="icon"></span>Contact</a>
                 </li>
-                <li id="goto-returnpol" class="menubar">
+                <li onclick="location.href='returnpolicy.html'" style="cursor: pointer" id="goto-returnpol" class="menubar">
                     <a href="returnpolicy.html"><span class="icon"></span>Return Policy</a>
                 </li>
             </ul>
