separate products js, css

--- a/public/products.html
+++ b/public/products.html
@@ -22,7 +22,9 @@
     <!-- style and scripts -->
     <script src="https://kit.fontawesome.com/b1cb71f6ae.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/products.css">
     <script src="../scripts/index.js" defer></script>
+    <script src="../scripts/products.js" defer></script>
     <title>vStack</title>
 </head>
 <body id="body">
