--- a/public/products.html
+++ b/public/products.html
@@ -40,6 +40,7 @@
         </div>
         <nav id="main-nav">
             <span id="logo" class="logoCart">
+                <button id="menuButton" class="material-icons md-menuButton">menu_open</button>
                 <span class="material-icons md-virus">shield_moon</span>
                 <h1 class="vstack">vStack</h1>
             </span>
@@ -69,7 +70,7 @@
 
 
     <main>
-        <div id="product-div"></div>
+        <div id="product-grid"></div>
     </main>
 
 
