--- a/public/products.html
+++ b/public/products.html
@@ -70,7 +70,11 @@
 
 
     <main>
-        <div id="product-grid"></div>
+        <div class="main-content">
+            <div id="product-grid">
+                
+            </div>
+        </div>
     </main>
 
 
