--- a/public/products.html
+++ b/public/products.html
@@ -71,9 +71,9 @@
 
     <main>
         <div class="main-content">
-            <div id="product-grid">
+            <ul id="product-grid">
                 
-            </div>
+            </ul>
         </div>
     </main>
 
