fixed bootstrap issue.

--- a/public/cart.html
+++ b/public/cart.html
@@ -23,7 +23,9 @@
     <script src="https://kit.fontawesome.com/b1cb71f6ae.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/index.css">
     <script src="../scripts/index.js" defer></script>
-    <link rel="stylesheet" type="text/css" href="../assets/dist/css/bootstrap.min.css">
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 
 
 
@@ -307,7 +309,6 @@
     </div>
     <div id="copyright"><p>Copyright © 2021 vStack All Rights Reserved.</p></div>
 </footer>
-<script src="../assets/dist/js/bootstrap.bundle.min.js" type="text/css"></script>
 
 <script src="/scripts/form-validation.js"></script>
 
