Add page content

--- a/public/returnpolicy.html
+++ b/public/returnpolicy.html
@@ -68,6 +68,11 @@
 
 
     <main>
+        <div class="main-content">
+            <p>
+                We do not provide any returns, nor do we hold legal accountability for what you do with these products. Due to the nature of this site, we will not give you money back nor will we help getting these to work. If you are unable to use these yourself, it's not the product for you.
+            </p>
+        </div>
     </main>
 
 
