--- a/public/cart.html
+++ b/public/cart.html
@@ -26,6 +26,7 @@
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="../scripts/index.js" defer></script>
+    <script src="../scripts/checkout.js" defer></script>
     <title>vStack</title>
 </head>
 <body id="body">
@@ -89,45 +90,7 @@
                             <div class="panel-heading">
                                 Review Order <div class="pull-right"><small><a class="afix-1" href="#">Edit Cart</a></small></div>
                             </div>
-                            <div class="panel-body">
-                                <div class="form-group">
-                                    <div class="col-sm-3 col-xs-3">
-                                        <img class="img-responsive" src="//c1.staticflickr.com/1/466/19681864394_c332ae87df_t.jpg" />
-                                    </div>
-                                    <div class="col-sm-6 col-xs-6">
-                                        <div class="col-xs-12">Product name</div>
-                                        <div class="col-xs-12"><small>Quantity:<span>1</span></small></div>
-                                    </div>
-                                    <div class="col-sm-3 col-xs-3 text-right">
-                                        <h6><span>$</span>25.00</h6>
-                                    </div>
-                                </div>
-                                <div class="form-group"><hr /></div>
-                                <div class="form-group">
-                                    <div class="col-sm-3 col-xs-3">
-                                        <img class="img-responsive" src="//c1.staticflickr.com/1/466/19681864394_c332ae87df_t.jpg" />
-                                    </div>
-                                    <div class="col-sm-6 col-xs-6">
-                                        <div class="col-xs-12">Product name</div>
-                                        <div class="col-xs-12"><small>Quantity:<span>1</span></small></div>
-                                    </div>
-                                    <div class="col-sm-3 col-xs-3 text-right">
-                                        <h6><span>$</span>25.00</h6>
-                                    </div>
-                                </div>
-                                <div class="form-group"><hr /></div>
-                                <div class="form-group">
-                                    <div class="col-sm-3 col-xs-3">
-                                        <img class="img-responsive" src="//c1.staticflickr.com/1/466/19681864394_c332ae87df_t.jpg" />
-                                    </div>
-                                    <div class="col-sm-6 col-xs-6">
-                                        <div class="col-xs-12">Product name</div>
-                                        <div class="col-xs-12"><small>Quantity:<span>2</span></small></div>
-                                    </div>
-                                    <div class="col-sm-3 col-xs-3 text-right">
-                                        <h6><span>$</span>50.00</h6>
-                                    </div>
-                                </div>
+                            <div class="panel-body" id="productPanel">
                                 <div class="form-group"><hr /></div>
                                 <div class="form-group">
                                     <div class="col-xs-12">
