Dan/Emil parkodning. Checkout order summary.

--- a/public/cart.html
+++ b/public/cart.html
@@ -88,34 +88,9 @@
                         <!--REVIEW ORDER-->
                         <div class="panel panel-info">
                             <div class="panel-heading">
-                                Review Order <div class="pull-right"><small><a class="afix-1" href="#">Edit Cart</a></small></div>
+                                Review Order
                             </div>
                             <div class="panel-body" id="productPanel">
-                                <div class="form-group"><hr /></div>
-                                <div class="form-group">
-                                    <div class="col-xs-12">
-                                        <strong>Subtotal</strong>
-                                        <div class="pull-right"><span>$</span><span>200.00</span></div>
-                                    </div>
-                                    <div class="col-xs-12">
-                                        <small>Shipping</small>
-                                        <div class="pull-right"><span>-</span></div>
-                                    </div>
-                                </div>
-                                <div class="form-group"><hr /></div>
-                                <div class="form-group">
-                                    <div class="col-xs-12">
-                                        <strong>Order Total</strong>
-                                        <div class="pull-right"><span>$</span><span>150.00</span></div>
-                                    </div>
-                                </div>
-                                <div id="btnDiv">
-                                <div id="PlaceOrderBtn" class="form-group">
-                                    <div class="col-md-6 col-sm-6 col-xs-12">
-                                        <button type="submit" class="btn btn-primary btn-submit-fix">Place Order</button>
-                                    </div>
-                                </div>
-                                </div>
                             </div>
                         </div>
                         <!--REVIEW ORDER END-->
