Dan/Emil Parkodning, checkout styling.

--- a/public/products.html
+++ b/public/products.html
@@ -33,7 +33,7 @@
             <div>
                 <span class="icon">
                     <i class="fas fa-exclamation-circle"></i>
-                </span>
+                </span>s
                 <strong>OBS!</strong> Denna sida är ett projekt inom kursen <em>UTVECKLING AV WEBBAPPLIKATIONER</em> på <a href="https://www.newton.se/" rel="noreferrer noopener" target="_blank">Newton&nbsp;yrkeshögskola</a>.<br>
                     <strong>PRODUKTERNA ÄR INTE VERKLIGA!</strong> (Om nu någon trodde det...)
             </div>
